# personaplex

./: .env.example  .gitignore  AGENTS.md  API_DOCUMENTATION.md  Dockerfile  FRONTEND_DEVELOPMENT.md  QUICKSTART.md  README-es.md  README.md  TROUBLESHOOTING.md  modal_app.py  modal_app_backup.py  modal_members.txt
assets/test/: prompt_service.txt
backups/: modal_app_v1_initial_success.py  modal_app_v2_diagnostic_stable.py  modal_app_v3_event_latency.py
client/: .env.local  package-lock.json  package.json  vite.config.ts
client/src/: app.tsx  env.ts
client/src/decoder/: decoderWorker.ts
client/src/i18n/: en.json  index.ts  ko.json
client/src/pages/Conversation/: Conversation.tsx
client/src/pages/Queue/: Queue.tsx
client/src/pages/SimpleTest/: SimpleTest.tsx
custom_voices/: README.md
docs/: DEPLOYMENT_GUIDE.md  VOCAL_ADAPTATION_GUIDE.md
moshi/: README.md  pyproject.toml  requirements.txt
moshi/moshi/: client_utils.py  offline.py  server.py  stdio.py
moshi/moshi/korean/: __init__.py  asr.py  llm.py  pipeline.py  tts.py  voices.py
moshi/moshi/models/: lm.py  loaders.py
moshi/moshi/modules/: transformer.py
moshi/moshi/utils/: compile.py  logging.py  logging_interface.py
moshi/test/: stdio_realtime_check.py
notebooks/: PersonaPlex_Full-Duplex_Colab.ipynb  pepper_local_inference.ipynb  pepper_local_inference_cloud.ipynb
postman/: PersonaPlex.postman_collection.json  PersonaPlex.postman_environment.json
scripts/: convert_audio_mono.py  convert_pt.py  download_weights_local.py  generate_voice_embedding.py  pepper_voice.py
(+6 files in other folders)
